--- a/quant_recipe_pipeline.ipynb
+++ b/quant_recipe_pipeline.ipynb
@@ -50,7 +50,10 @@
                 "tensors_from_csv = False    #@param {type:\"boolean\"}\n",
                 "cpu_irq_k = 1.5             #@param {type:\"number\"}\n",
                 "gpu_irq_k = 1.5             #@param {type:\"number\"}\n",
-                "skip_gpg = False            #@param {type:\"boolean\"}\n"
+                "skip_gpg = False            #@param {type:\"boolean\"}\n",
+                "\n",
+                "# pipeline parameters\n",
+                "display_graphs = True       #@param {type:\"boolean\"}"
             ]
         },
         {
@@ -140,12 +143,52 @@
             "source": [
                 "!if [ -f ppl_results.csv ]; then \\\n",
                 "    echo \"Complete ppl_results.csv already exists. Skipping interpolation...\"; \\\n",
+                "    ln -sf ppl_results.csv ppl_results_to_plot.csv; \\\n",
                 "elif [ -f ppl_results_partial.csv ]; then \\\n",
                 "    echo \"Interpolation of ppl_results.csv necessary.\"; \\\n",
+                "    ln -sf ppl_results_partial.csv ppl_results_to_plot.csv; \\\n",
                 "    python ../../fill_missing_ppl.py ppl_results_partial.csv; \\\n",
                 "else \\\n",
                 "    echo \"Error: No ppl results found. Aborting.\"; \\\n",
                 "fi"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "id": "adae401b",
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "![ \"$display_graphs\" = \"True\" ] && cp ../../plot_ppl.py plot_ppl.tmp.py && \\\n",
+                "sed -Ei \\\n",
+                "  -e '/^[[:space:]]*root[[:space:]]*=[[:space:]]*tk\\.Tk\\(\\)/s|.*|# &|' \\\n",
+                "  -e '/^[[:space:]]*root\\./s|.*|# &|' \\\n",
+                "  -e '$a plt.show()' \\\n",
+                "  plot_ppl.tmp.py\n",
+                "\n",
+                "if display_graphs:\n",
+                "  # Utility to strip “=…” from any entries\n",
+                "  def strip_assign(regex):\n",
+                "      return regex.split('=')[0]\n",
+                "\n",
+                "  # Function to run the plotting script for each regex\n",
+                "  def run_for_list(name, regex_list, strip_eq=False):\n",
+                "      if not regex_list:\n",
+                "        return\n",
+                "      print(f\"## Using `{name}`\")\n",
+                "      for rx in regex_list:\n",
+                "        clean_rx = strip_assign(rx) if strip_eq else rx\n",
+                "        # this print can be copy‑&‑pasted into a new cell, or you can %run directly below\n",
+                "        print(f\"%run plot_ppl.tmp.py ppl_results_to_plot.csv --tensors '{clean_rx}'\")\n",
+                "        %run plot_ppl.tmp.py ppl_results_to_plot.csv --tensors '{clean_rx}'\n",
+                "      print()\n",
+                "\n",
+                "  #Now invoke for each\n",
+                "  run_for_list(\"gpu_assign_tensors\", gpu_assign_tensors, strip_eq=True)\n",
+                "  run_for_list(\"cpu_assign_tensors\", cpu_assign_tensors, strip_eq=True)\n",
+                "  run_for_list(\"gpu_tensors\", gpu_tensors)\n",
+                "  run_for_list(\"cpu_tensors\", cpu_tensors)"
             ]
         },
         {
