--- a/quant_recipe_pipeline.ipynb
+++ b/quant_recipe_pipeline.ipynb
@@ -146,10 +146,13 @@
                 "    ln -sf ppl_results.csv ppl_results_to_plot.csv; \\\n",
                 "elif [ -f ppl_results_partial.csv ]; then \\\n",
                 "    echo \"Interpolation of ppl_results.csv necessary.\"; \\\n",
-                "    ln -sf ppl_results_partial.csv ppl_results_to_plot.csv; \\\n",
+                "    ln -sf ppl_results.csv ppl_results_to_plot.csv; \\\n",
+                "    rm -f ppl_results_partial_*interpolated.csv; \\\n",
                 "    python ../../fill_missing_ppl.py ppl_results_partial.csv; \\\n",
+                "    ln -sf ppl_results_partial_*interpolated.csv ppl_results_to_plot_inter.csv; \\\n",
                 "else \\\n",
                 "    echo \"Error: No ppl results found. Aborting.\"; \\\n",
+                "    exit 1; \\\n",
                 "fi"
             ]
         },
@@ -167,6 +170,9 @@
                 "  -e '$a plt.show()' \\\n",
                 "  plot_ppl.tmp.py\n",
                 "\n",
+                "inter_csv = False\n",
+                "![ -f ppl_results_to_plot_inter.csv ] && inter_csv=True\n",
+                "\n",
                 "if display_graphs:\n",
                 "  # Utility to strip “=…” from any entries\n",
                 "  def strip_assign(regex):\n",
@@ -180,8 +186,12 @@
                 "      for rx in regex_list:\n",
                 "        clean_rx = strip_assign(rx) if strip_eq else rx\n",
                 "        # this print can be copy‑&‑pasted into a new cell, or you can %run directly below\n",
-                "        print(f\"%run plot_ppl.tmp.py ppl_results_to_plot.csv --tensors '{clean_rx}'\")\n",
-                "        %run plot_ppl.tmp.py ppl_results_to_plot.csv --tensors '{clean_rx}'\n",
+                "        if inter_csv:\n",
+                "          print(f\"%run plot_ppl.tmp.py ppl_results_to_plot.csv --tensors '{clean_rx}'\")\n",
+                "          %run plot_ppl.tmp.py ppl_results_to_plot.csv --inter_csv ppl_results_to_plot_inter.csv --tensors '{clean_rx}'\n",
+                "        else:\n",
+                "          print(f\"%run plot_ppl.tmp.py ppl_results_to_plot.csv --tensors '{clean_rx}'\")\n",
+                "          %run plot_ppl.tmp.py ppl_results_to_plot.csv --tensors '{clean_rx}'\n",
                 "      print()\n",
                 "\n",
                 "  #Now invoke for each\n",
