Bugfix with ppl_results_partial.csv

--- a/quant_recipe_pipeline.ipynb
+++ b/quant_recipe_pipeline.ipynb
@@ -146,7 +146,7 @@
                 "    ln -sf ppl_results.csv ppl_results_to_plot.csv; \\\n",
                 "elif [ -f ppl_results_partial.csv ]; then \\\n",
                 "    echo \"Interpolation of ppl_results.csv necessary.\"; \\\n",
-                "    ln -sf ppl_results.csv ppl_results_to_plot.csv; \\\n",
+                "    ln -sf ppl_results_partial.csv ppl_results_to_plot.csv; \\\n",
                 "    rm -f ppl_results_partial_*interpolated.csv; \\\n",
                 "    python ../../fill_missing_ppl.py ppl_results_partial.csv; \\\n",
                 "    ln -sf ppl_results_partial_*interpolated.csv ppl_results_to_plot_inter.csv; \\\n",
