bugfix, wrong var used

--- a/quant_recipe_pipeline.ipynb
+++ b/quant_recipe_pipeline.ipynb
@@ -170,8 +170,8 @@
                 "  -e '$a plt.show()' \\\n",
                 "  plot_ppl.tmp.py\n",
                 "\n",
-                "inter_csv = False\n",
-                "![ -f ppl_results_to_plot_inter.csv ] && inter_csv=True\n",
+                "import os\n",
+                "interp_csv = os.path.isfile(\"ppl_results_to_plot_inter.csv\")\n",
                 "\n",
                 "if display_graphs:\n",
                 "  # Utility to strip “=…” from any entries\n",
@@ -186,9 +186,9 @@
                 "      for rx in regex_list:\n",
                 "        clean_rx = strip_assign(rx) if strip_eq else rx\n",
                 "        # this print can be copy‑&‑pasted into a new cell, or you can %run directly below\n",
-                "        if inter_csv:\n",
+                "        if interp_csv:\n",
                 "          print(f\"%run plot_ppl.tmp.py ppl_results_to_plot.csv --tensors '{clean_rx}'\")\n",
-                "          %run plot_ppl.tmp.py ppl_results_to_plot.csv --inter_csv ppl_results_to_plot_inter.csv --tensors '{clean_rx}'\n",
+                "          %run plot_ppl.tmp.py ppl_results_to_plot.csv --interp_csv ppl_results_to_plot_inter.csv --tensors '{clean_rx}'\n",
                 "        else:\n",
                 "          print(f\"%run plot_ppl.tmp.py ppl_results_to_plot.csv --tensors '{clean_rx}'\")\n",
                 "          %run plot_ppl.tmp.py ppl_results_to_plot.csv --tensors '{clean_rx}'\n",
