use iq2_ks instead of iq2_k

--- a/quant_recipe_pipeline.ipynb
+++ b/quant_recipe_pipeline.ipynb
@@ -27,7 +27,7 @@
                 "cpu_tensors = [r\"blk\\.([3-9]|[1-5][0-9]|60)\\.ffn_down_exps\\.weight\", r\"blk\\.([3-9]|[1-5][0-9]|60)\\.ffn_up_exps\\.weight\", r\"blk\\.([3-9]|[1-5][0-9]|60)\\.ffn_gate_exps\\.weight\"]   #@param {type:\"raw\"}\n",
                 "\n",
                 "# quant types\n",
-                "cpu_quants = [\"iq4_ks\", \"iq3_k\", \"iq2_k\", \"iq1_m_r4\"]   #@param {type:\"raw\"}\n",
+                "cpu_quants = [\"iq4_ks\", \"iq3_k\", \"iq2_ks\", \"iq1_m_r4\"]   #@param {type:\"raw\"}\n",
                 "gpu_quants = [\"q8_0\", \"iq5_k_r4\", \"iq6_k\"]              #@param {type:\"raw\"}\n",
                 "\n",
                 "# sizes & tuning\n",
