ppl_results.csv was missing tensors

--- a/quant_recipe_pipeline.ipynb
+++ b/quant_recipe_pipeline.ipynb
@@ -52,7 +52,7 @@
                 "gpu_irq_k = 1.5             #@param {type:\"number\"}\n",
                 "skip_gpg = False            #@param {type:\"boolean\"}\n",
                 "\n",
-                "# pipeline parameters\n",
+                "# other pipeline parameters\n",
                 "display_graphs = True       #@param {type:\"boolean\"}"
             ]
         },
