cpu_assign_qtype type bugfix

--- a/quant_recipe_pipeline.ipynb
+++ b/quant_recipe_pipeline.ipynb
@@ -39,7 +39,7 @@
                 "# assignment override\n",
                 "gpu_assign_qtype = \"iq4_xs\"    #@param {type:\"string\"}\n",
                 "gpu_assign_tensors = [r\"blk\\.([0-9]|[1-5][0-9]|60)\\.attn_k_b\\.weight=q8_0\"] #@param {type:\"raw\"}\n",
-                "cpu_assign_qtype = None        #@param {type:\"raw\"}\n",
+                "cpu_assign_qtype = \"\"        #@param {type:\"string\"}\n",
                 "cpu_assign_tensors = []        #@param {type:\"raw\"}\n",
                 "\n",
                 "# additional flags\n",
