--- a/quant_recipe_pipeline.ipynb
+++ b/quant_recipe_pipeline.ipynb
@@ -56,6 +56,13 @@
                 "cpu_assign_qtype = \"\"        #@param {type:\"string\"}\n",
                 "cpu_assign_tensors = []        #@param {type:\"raw\"}\n",
                 "\n",
+                "# harmonization options (optional)\n",
+                "# harmonize_tensors: list-of-lists of regex strings; each inner list declares a group whose matching tensors (within a class) will be qtype harmonized layer-wise.\n",
+                "# Default harmonizes ffn_up_exps and ffn_gate_exps fused pairs used by ik_llama.cpp (speed boost ~15%).\n",
+                "harmonize_tensors = [[r\"blk\\..*\\.ffn_up_exps.*\", r\"blk\\..*\\.ffn_gate_exps.*\"]]   #@param {type:\"raw\"}\n",
+                "# harmonization_technique: 1=max (default), 2=mean, 3=min\n",
+                "harmonization_technique = 1    #@param {type:\"integer\"}\n",
+                "\n",
                 "# additional flags (advanced and optional)\n",
                 "qtype = \"\"                  #@param {type:\"string\"}\n",
                 "debug = False               #@param {type:\"boolean\"}\n",
@@ -234,6 +241,7 @@
             "source": [
                 "import os, glob\n",
                 "import shlex, subprocess\n",
+                "import json\n",
                 "\n",
                 "def add_flag(cmd, key, val):\n",
                 "    if isinstance(val, bool):\n",
@@ -246,6 +254,12 @@
                 "    if vals:\n",
                 "        cmd.append(f\"--{key}\")\n",
                 "        cmd.extend(vals)\n",
+                "\n",
+                "def add_list_of_list_flag(cmd, key, val_groups):\n",
+                "    if val_groups is None:\n",
+                "        return\n",
+                "    serialized = repr(val_groups)\n",
+                "    cmd.extend([f\"--{key}\", serialized])\n",
                 "\n",
                 "# Determine which file to use\n",
                 "if os.path.isfile(\"ppl_results.csv\"):\n",
@@ -286,6 +300,11 @@
                 "add_list_flag(cmd, \"gpu-quants\", gpu_quants)\n",
                 "add_list_flag(cmd, \"cpu-assign-tensors\", cpu_assign_tensors)\n",
                 "add_list_flag(cmd, \"gpu-assign-tensors\", gpu_assign_tensors)\n",
+                "\n",
+                "if harmonize_tensors:\n",
+                "    add_list_of_list_flag(cmd, \"harmonize-tensors\", harmonize_tensors)\n",
+                "if harmonization_technique:\n",
+                "    add_flag(cmd, \"harmonization-technique\", harmonization_technique)\n",
                 "\n",
                 "# Print for verification\n",
                 "print(\"\\nRunning quant_assign.py command:\")\n",
