--- a/quant_recipe_pipeline.ipynb
+++ b/quant_recipe_pipeline.ipynb
@@ -256,10 +256,18 @@
                 "        cmd.extend(vals)\n",
                 "\n",
                 "def add_list_of_list_flag(cmd, key, val_groups):\n",
-                "    if val_groups is None:\n",
+                "    if not val_groups:\n",
                 "        return\n",
-                "    serialized = repr(val_groups)\n",
-                "    cmd.extend([f\"--{key}\", serialized])\n",
+                "    cmd.append(f\"--{key}\")\n",
+                "    for grp in val_groups:\n",
+                "        if isinstance(grp, (list, tuple)):\n",
+                "            # join items with commas, preserving backslashes etc.\n",
+                "            cmd.append(\",\".join(str(x) for x in grp))\n",
+                "        elif isinstance(grp, str):\n",
+                "            # allow passing a pre-joined string\n",
+                "            cmd.append(grp)\n",
+                "        else:\n",
+                "            raise TypeError(f\"Unsupported group type for --{key}: {type(grp)}\")\n",
                 "\n",
                 "# Determine which file to use\n",
                 "if os.path.isfile(\"ppl_results.csv\"):\n",
