--- a/quant_recipe_pipeline.ipynb
+++ b/quant_recipe_pipeline.ipynb
@@ -38,11 +38,11 @@
                 "model_name = \"DeepSeek-R1-0528\"                                     #@param {type:\"string\"}\n",
                 "model_link = \"https://huggingface.co/deepseek-ai/DeepSeek-R1-0528\"  #@param {type:\"string\"}\n",
                 "\n",
-                "# regex lists as Python lists of strings - Tensor names can be found in *.recipe file of the model directory\n",
-                "gpu_tensors = [r\".*\"]    #@param {type:\"raw\"}\n",
+                "# regex lists as Python lists of strings - CPU/GPU-friendly tensor names can be found in *.recipe file of the model directory\n",
                 "cpu_tensors = [r\"blk\\.([3-9]|[1-5][0-9]|60)\\.ffn_down_exps\\.weight\", r\"blk\\.([3-9]|[1-5][0-9]|60)\\.ffn_up_exps\\.weight\", r\"blk\\.([3-9]|[1-5][0-9]|60)\\.ffn_gate_exps\\.weight\"]   #@param {type:\"raw\"}\n",
+                "gpu_tensors = [r\".*\"]    #@param {type:\"raw\"}\n",
                 "\n",
-                "# quant types\n",
+                "# quant types for cpu-friendly and gpu-friendly tensor assignments\n",
                 "cpu_quants = [\"iq4_ks\", \"iq3_k\", \"iq2_ks\", \"iq1_m_r4\"]   #@param {type:\"raw\"}\n",
                 "gpu_quants = [\"q8_0\", \"iq5_k_r4\", \"iq6_k\"]              #@param {type:\"raw\"}\n",
                 "\n",
@@ -53,10 +53,10 @@
                 "exponential_factor = 8          #@param {type:\"integer\"}\n",
                 "\n",
                 "# assignment override\n",
-                "gpu_assign_qtype = \"iq4_xs\"    #@param {type:\"string\"}\n",
-                "gpu_assign_tensors = [r\"blk\\.([0-9]|[1-5][0-9]|60)\\.attn_k_b\\.weight=q8_0\"] #@param {type:\"raw\"}\n",
                 "cpu_assign_qtype = \"\"        #@param {type:\"string\"}\n",
                 "cpu_assign_tensors = []        #@param {type:\"raw\"}\n",
+                "gpu_assign_qtype = \"iq4_xs\"    #@param {type:\"string\"}\n",
+                "gpu_assign_tensors = [r\"blk\\.([0-9]|[1-5][0-9]|60)\\.attn_k_b\\.weight=q8_0\"] #@param {type:\"raw\"}\n",
                 "\n",
                 "# harmonization options (optional)\n",
                 "# harmonize_tensors: list-of-lists of regex strings; each inner list declares a group whose matching tensors (within a class) will be qtype harmonized layer-wise.\n",
