Qwen3-4B-Instruct-2507 examples + comparison with unsloth

--- a/quant_recipe_pipeline.ipynb
+++ b/quant_recipe_pipeline.ipynb
@@ -65,8 +65,10 @@
                 "# harmonization_technique: 1=max, 2=mean, 3=min (default)\n",
                 "harmonization_technique = 3    #@param {type:\"integer\"}\n",
                 "\n",
-                "# additional flags (advanced and optional)\n",
+                "# calibration data qtype (leave empty for auto-selection which will choose the lowest bpw) - list of available qtypes can be found in the ppl_results.csv file\n",
                 "qtype = \"\"                  #@param {type:\"string\"}\n",
+                "\n",
+                "# additional flags (advanced and optional)\n",
                 "debug = False               #@param {type:\"boolean\"}\n",
                 "info = False                #@param {type:\"boolean\"}\n",
                 "ignore_f32 = False          #@param {type:\"boolean\"}\n",
