Tools updated to help users choose the best quants
Need help choosing your quants? See how quants perform on different hardware here: https://github.com/Thireus/GGUF-Tool-Suite/tree/main/quants_graphs

--- a/quant_recipe_pipeline.ipynb
+++ b/quant_recipe_pipeline.ipynb
@@ -21,6 +21,8 @@
                 "\n",
                 "See https://huggingface.co/Thireus/collections for the complete list of supported models and available quants - NOT ALL QUANTS ARE AVAILABLE! PLEASE CHECK FIRST!\n",
                 "\n",
+                "Need help choosing your quants? See how quants perform on different hardware here: https://github.com/Thireus/GGUF-Tool-Suite/tree/main/quants_graphs\n",
+                "\n",
                 "> Recipe files can also be turned back into Google Colab pipeline parameters - [![Open in Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/Thireus/GGUF-Tool-Suite/blob/main/recipe_to_colab_params.ipynb) or locally with `recipe_to_colab_params.py`."
             ]
         },
