Exact pattern match tensors
Fix for https://github.com/Thireus/GGUF-Tool-Suite/issues/21

--- a/quant_recipe_pipeline.ipynb
+++ b/quant_recipe_pipeline.ipynb
@@ -41,7 +41,7 @@
                 "model_link = \"https://huggingface.co/deepseek-ai/DeepSeek-R1-0528\"  #@param {type:\"string\"}\n",
                 "\n",
                 "# regex lists as Python lists of strings - CPU/GPU-friendly tensor names can be found in *.recipe file of the model directory\n",
-                "cpu_tensors = [r\"blk\\.([3-9]|[1-5][0-9]|60)\\.ffn_down_exps\\.weight\", r\"blk\\.([3-9]|[1-5][0-9]|60)\\.ffn_up_exps\\.weight\", r\"blk\\.([3-9]|[1-5][0-9]|60)\\.ffn_gate_exps\\.weight\"]   #@param {type:\"raw\"}\n",
+                "cpu_tensors = [r\"^blk\\.([3-9]|[1-5][0-9]|60)\\.ffn_down_exps\\.weight$\", r\"^blk\\.([3-9]|[1-5][0-9]|60)\\.ffn_up_exps\\.weight$\", r\"^blk\\.([3-9]|[1-5][0-9]|60)\\.ffn_gate_exps\\.weight$\"]   #@param {type:\"raw\"}\n",
                 "gpu_tensors = [r\".*\"]    #@param {type:\"raw\"}\n",
                 "\n",
                 "# quant types for cpu-friendly and gpu-friendly tensor assignments\n",
@@ -58,12 +58,12 @@
                 "cpu_assign_qtype = \"\"        #@param {type:\"string\"}\n",
                 "cpu_assign_tensors = []        #@param {type:\"raw\"}\n",
                 "gpu_assign_qtype = \"iq4_xs\"    #@param {type:\"string\"}\n",
-                "gpu_assign_tensors = [r\"blk\\.([0-9]|[1-5][0-9]|60)\\.attn_k_b\\.weight=q8_0\"] #@param {type:\"raw\"}\n",
+                "gpu_assign_tensors = [r\"^blk\\.([0-9]|[1-5][0-9]|60)\\.attn_k_b\\.weight$=q8_0\"] #@param {type:\"raw\"}\n",
                 "\n",
                 "# harmonization options (optional)\n",
                 "# harmonize_tensors: list-of-lists of regex strings; each inner list declares a group whose matching tensors (within a class) will be qtype harmonized layer-wise.\n",
                 "# Default harmonizes ffn_up_exps and ffn_gate_exps fused pairs used by ik_llama.cpp (speed boost ~15%).\n",
-                "harmonize_tensors = [[r\"blk\\..*\\.ffn_up_exps.*\", r\"blk\\..*\\.ffn_gate_exps.*\"]]   #@param {type:\"raw\"}\n",
+                "harmonize_tensors = [[r\"^blk\\..*\\.ffn_up_exps.*\", r\"^blk\\..*\\.ffn_gate_exps.*\"]]   #@param {type:\"raw\"}\n",
                 "# harmonization_technique: 1=max, 2=mean, 3=min (default)\n",
                 "harmonization_technique = 3    #@param {type:\"integer\"}\n",
                 "\n",
