Update graphs + better disable harmonization

--- a/quant_recipe_pipeline.ipynb
+++ b/quant_recipe_pipeline.ipynb
@@ -64,7 +64,7 @@
                 "# harmonize_tensors: list-of-lists of regex strings; each inner list declares a group whose matching tensors (within a class) will be qtype harmonized layer-wise.\n",
                 "# Default harmonizes ffn_up_exps and ffn_gate_exps fused pairs used by ik_llama.cpp (speed boost ~15%).\n",
                 "harmonize_tensors = [[r\"^blk\\..*\\.ffn_up_exps.*\", r\"^blk\\..*\\.ffn_gate_exps.*\"]]   #@param {type:\"raw\"}\n",
-                "# harmonization_technique: 1=max, 2=mean, 3=min (default)\n",
+                "# harmonization_technique: 0=disabled, 1=max, 2=mean, 3=min (default)\n",
                 "harmonization_technique = 3    #@param {type:\"integer\"}\n",
                 "\n",
                 "# calibration data qtype (leave empty for auto-selection which will choose the lowest bpw) - list of available qtypes can be found in the ppl_results.csv file\n",
