Better harmonization disabled

--- a/quant_recipe_pipeline.ipynb
+++ b/quant_recipe_pipeline.ipynb
@@ -261,16 +261,36 @@
                 "        cmd.append(f\"--{key}\")\n",
                 "        cmd.extend(vals)\n",
                 "\n",
-                "def add_list_of_list_flag(cmd, key, val_groups):\n",
-                "    if not val_groups:\n",
+                "def add_list_of_list_flag(cmd, key, val_groups, *, allow_empty=False):\n",
+                "    \"\"\"\n",
+                "    Add --<key> followed by group values. By default, empty string or empty list is treated\n",
+                "    as \"no flag\". If allow_empty is True, an explicit empty argument is added (['--key', '']).\n",
+                "    \"\"\"\n",
+                "    if val_groups is None:\n",
                 "        return\n",
+                "\n",
+                "    # explicit empty string or empty list -> only add when allow_empty=True\n",
+                "    if (isinstance(val_groups, str) and val_groups == \"\") or (\n",
+                "        isinstance(val_groups, (list, tuple)) and len(val_groups) == 0\n",
+                "    ):\n",
+                "        if not allow_empty:\n",
+                "            return\n",
+                "        cmd.append(f\"--{key}\")\n",
+                "        cmd.append(\"\")   # explicit empty argument\n",
+                "        return\n",
+                "\n",
+                "    # pre-joined string (non-empty)\n",
+                "    if isinstance(val_groups, str):\n",
+                "        cmd.append(f\"--{key}\")\n",
+                "        cmd.append(val_groups)\n",
+                "        return\n",
+                "\n",
+                "    # iterable of groups\n",
                 "    cmd.append(f\"--{key}\")\n",
                 "    for grp in val_groups:\n",
                 "        if isinstance(grp, (list, tuple)):\n",
-                "            # join items with commas, preserving backslashes etc.\n",
                 "            cmd.append(\",\".join(str(x) for x in grp))\n",
                 "        elif isinstance(grp, str):\n",
-                "            # allow passing a pre-joined string\n",
                 "            cmd.append(grp)\n",
                 "        else:\n",
                 "            raise TypeError(f\"Unsupported group type for --{key}: {type(grp)}\")\n",
@@ -315,9 +335,12 @@
                 "add_list_flag(cmd, \"cpu-assign-tensors\", cpu_assign_tensors)\n",
                 "add_list_flag(cmd, \"gpu-assign-tensors\", gpu_assign_tensors)\n",
                 "\n",
-                "if harmonize_tensors:\n",
-                "    add_list_of_list_flag(cmd, \"harmonize-tensors\", harmonize_tensors)\n",
-                "if harmonization_technique:\n",
+                "if harmonize_tensors or harmonize_tensors == []:\n",
+                "    if harmonize_tensors == []:\n",
+                "        add_list_of_list_flag(cmd, \"harmonize-tensors\", harmonize_tensors, allow_empty=True)\n",
+                "    else:\n",
+                "        add_list_of_list_flag(cmd, \"harmonize-tensors\", harmonize_tensors)\n",
+                "if harmonization_technique or harmonization_technique == 0:\n",
                 "    add_flag(cmd, \"harmonization-technique\", harmonization_technique)\n",
                 "\n",
                 "# Print for verification\n",
