ANY csv calibration data support for Google Colab + Various improvements
```
  --output-regex-csv FILE               Path to output REGEX CSV file (default: $OUTPUT_REGEX_CSV)
  --regex REGEX                         String pattern to match where metric can be found, e.g. '.*Mean[[:space:]]*Δp[[:space:]]*:[[:space:]]*(-?[0-9]+(\.[0-9]+)?).*'
```

This new regex feature of collect_ppl_results.sh allows users to collect any metrics from the bench results log files.

Google Colab now supports a new "csv_filename" parameter which can be specified to use a different calibration data such as kld_results.csv (coming soon for existing models...)

Closes issue #27

--- a/quant_recipe_pipeline.ipynb
+++ b/quant_recipe_pipeline.ipynb
@@ -67,7 +67,10 @@
                 "# harmonization_technique: 0=disabled, 1=max, 2=mean, 3=min (default)\n",
                 "harmonization_technique = 3    #@param {type:\"integer\"}\n",
                 "\n",
-                "# calibration data qtype (leave empty for auto-selection which will choose the lowest bpw) - list of available qtypes can be found in the ppl_results.csv file\n",
+                "# calibration data filename (\"ppl_results.csv\" or \"ppl_results_partial.csv\" are automatically used by default when empty)\n",
+                "csv_filename = \"\" #@param {type:\"string\"}\n",
+                "\n",
+                "# calibration data qtype (leave empty for auto-selection which will choose the lowest bpw) - list of available qtypes can be found in the calibration data file\n",
                 "qtype = \"\"                  #@param {type:\"string\"}\n",
                 "\n",
                 "# additional flags (advanced and optional)\n",
@@ -101,14 +104,15 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "%%bash -e -s \"$repo_url\" \"$model_name\"\n",
+                "%%bash -e -s \"$repo_url\" \"$model_name\" \"$csv_filename\"\n",
                 "REPO_URL=\"$1\"\n",
                 "MODEL_NAME=\"$2\"\n",
+                "CSV_FILENAME=\"$3\"\n",
                 "\n",
                 "# 1) Clone (if needed) and cd into repo\n",
                 "if [ ! -d GGUF-Tool-Suite ]; then\n",
                 "  echo \"↳ GGUF-Tool-Suite not found; cloning from $REPO_URL...\"\n",
-                "  git clone \"$REPO_URL\" \\\n",
+                "  GIT_LFS_SKIP_SMUDGE=1 git clone \"$REPO_URL\" \\\n",
                 "    || { echo \"❌ ERROR: failed to clone GGUF-Tool-Suite. Aborting.\"; exit 1; }\n",
                 "fi\n",
                 "cd GGUF-Tool-Suite\n",
@@ -127,16 +131,39 @@
                 "  exit 1\n",
                 "fi\n",
                 "\n",
-                "# 4) Link ppl_results.csv (or abort with warning)\n",
-                "if [ -f models/$MODEL_NAME/ppl_results.csv ]; then\n",
-                "  ln -sf models/$MODEL_NAME/ppl_results.csv .\n",
-                "elif [ -f models/$MODEL_NAME/ppl_results_partial.csv ]; then\n",
-                "  rm -f ppl_results.csv\n",
-                "  ln -sf models/$MODEL_NAME/ppl_results_partial.csv .\n",
-                "  echo \"⚠️ WARNING: partial calibrated ppl_results_partial.csv found for '$MODEL_NAME; will try to interpolate missing results as best as we can, but this will unlikely produce ppl-optimum quant mixes (so please don't use for production) - full calibrated data likely coming soon.\"\n",
+                "# 4) Link calibration data csv file (or abort with warning)\n",
+                "rm -f *.csv\n",
+                "if [ -n \"$CSV_FILENAME\" ]; then\n",
+                "  # CSV filename provided\n",
+                "  if [ -f \"models/$MODEL_NAME/$CSV_FILENAME\" ]; then\n",
+                "    ln -sf \"models/$MODEL_NAME/$CSV_FILENAME\" custom_results.csv\n",
+                "  else\n",
+                "    echo \"❌ ERROR: File 'models/$MODEL_NAME/$CSV_FILENAME' does not exist.\"\n",
+                "    # If the filename ends with \"_interpolated.csv\", try to suggest a matching \"_partial\" file.\n",
+                "    if [[ \"$CSV_FILENAME\" == *_interpolated.csv ]]; then\n",
+                "      base=\"${CSV_FILENAME%_partial*}\"\n",
+                "      suggestion=$(find \"models/$MODEL_NAME\" -maxdepth 1 -type f -name \"${base}*\" | grep -v \"_interpolated.csv\" | grep \"_partial\" | head -n 1)\n",
+                "      if [ -n \"$suggestion\" ]; then\n",
+                "        suggestion_name=$(basename \"$suggestion\")\n",
+                "        echo \"⚠️  Hint: It looks like '$CSV_FILENAME' was an auto-generated interpolated file.\"\n",
+                "        echo \"    You may need to use '$suggestion_name' instead in your 'csv_filename' pipeline parameter.\"\n",
+                "      else\n",
+                "        echo \"ℹ️  No '_partial' CSV found either.\"\n",
+                "      fi\n",
+                "    fi\n",
+                "    exit 1\n",
+                "  fi\n",
                 "else\n",
-                "  echo \"❌ ERROR: ppl_results.csv (and ppl_results_partial.csv) missing; support for '$MODEL_NAME' likely coming soon.\"\n",
-                "  exit 1\n",
+                "  # CSV filename not provided\n",
+                "  if [ -f \"models/$MODEL_NAME/ppl_results.csv\" ]; then\n",
+                "    ln -sf \"models/$MODEL_NAME/ppl_results.csv\" .\n",
+                "  elif [ -f \"models/$MODEL_NAME/ppl_results_partial.csv\" ]; then\n",
+                "    ln -sf \"models/$MODEL_NAME/ppl_results_partial.csv\" .\n",
+                "    echo \"⚠️ WARNING: partial calibrated ppl_results_partial.csv found for '$MODEL_NAME'; will try to interpolate missing results as best as we can, but this will unlikely produce ppl-optimum quant mixes (so please don't use for production) - full calibrated data likely coming soon.\"\n",
+                "  else\n",
+                "    echo \"❌ ERROR: ppl_results.csv (and ppl_results_partial.csv) missing; support for '$MODEL_NAME' likely coming soon.\"\n",
+                "    exit 1\n",
+                "  fi\n",
                 "fi\n",
                 "\n",
                 "# 5) Make all scripts executable\n",
@@ -168,17 +195,72 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "!if [ -f ppl_results.csv ]; then \\\n",
+                "%%bash -e -s \"$csv_filename\"\n",
+                "CSV_FILENAME=\"$1\"\n",
+                "\n",
+                "if [ -n \"$CSV_FILENAME\" ]; then\n",
+                "  # split base and extension safely\n",
+                "  case \"$CSV_FILENAME\" in\n",
+                "    *.*)\n",
+                "      base=\"${CSV_FILENAME%.*}\"\n",
+                "      ;;\n",
+                "    *)\n",
+                "      base=\"$CSV_FILENAME\"\n",
+                "      ;;\n",
+                "  esac\n",
+                "\n",
+                "  if [ -f \"$CSV_FILENAME\" ] && [ \"${base##*_}\" != \"partial\" ]; then\n",
+                "    # Complete CSV exists and is not a _partial file\n",
+                "    echo \"Complete '$CSV_FILENAME' already exists. Skipping interpolation...\"\n",
+                "    ln -sf \"$CSV_FILENAME\" \"csv_results_to_plot.csv\"\n",
+                "\n",
+                "  elif [ -f \"$CSV_FILENAME\" ]; then\n",
+                "    # File exists but filename ends with _partial -> interpolation path\n",
+                "    echo \"Interpolation of '$CSV_FILENAME' necessary.\"\n",
+                "    ln -sf \"$CSV_FILENAME\" \"csv_results_to_plot.csv\"\n",
+                "\n",
+                "    # prepare pattern for interpolated outputs: e.g. base_*interpolated.csv\n",
+                "    pattern=\"${base}\"_*interpolated.csv\n",
+                "\n",
+                "    # enable nullglob so the pattern expands to zero args if no match\n",
+                "    shopt -s nullglob\n",
+                "    # remove any old interpolated files that match the pattern\n",
+                "    old_interpolated=( $pattern )\n",
+                "    if [ \"${#old_interpolated[@]}\" -gt 0 ]; then\n",
+                "      rm -f \"${old_interpolated[@]}\"\n",
+                "    fi\n",
+                "\n",
+                "    # run interpolation script (adjust path as needed)\n",
+                "    python ../../fill_missing_ppl.py \"$CSV_FILENAME\"\n",
+                "\n",
+                "    # look for generated interpolated file(s)\n",
+                "    new_interpolated=( $pattern )\n",
+                "    if [ \"${#new_interpolated[@]}\" -gt 0 ]; then\n",
+                "      # link the first matching interpolated file to csv_results_to_plot_inter.csv\n",
+                "      ln -sf \"${new_interpolated[0]}\" \"csv_results_to_plot_inter.csv\"\n",
+                "    else\n",
+                "      echo \"❌ ERROR: interpolation did not produce any '${base}_*interpolated.csv' output.\"\n",
+                "      shopt -u nullglob\n",
+                "      exit 1\n",
+                "    fi\n",
+                "    # restore nullglob off\n",
+                "    shopt -u nullglob\n",
+                "\n",
+                "  else\n",
+                "    echo \"❌ ERROR: File '$CSV_FILENAME' not found.\"\n",
+                "    exit 1\n",
+                "  fi\n",
+                "elif [ -f ppl_results.csv ]; then \\\n",
                 "    echo \"Complete ppl_results.csv already exists. Skipping interpolation...\"; \\\n",
-                "    ln -sf ppl_results.csv ppl_results_to_plot.csv; \\\n",
+                "    ln -sf ppl_results.csv csv_results_to_plot.csv; \\\n",
                 "elif [ -f ppl_results_partial.csv ]; then \\\n",
                 "    echo \"Interpolation of ppl_results.csv necessary.\"; \\\n",
-                "    ln -sf ppl_results_partial.csv ppl_results_to_plot.csv; \\\n",
+                "    ln -sf ppl_results_partial.csv csv_results_to_plot.csv; \\\n",
                 "    rm -f ppl_results_partial_*interpolated.csv; \\\n",
                 "    python ../../fill_missing_ppl.py ppl_results_partial.csv; \\\n",
-                "    ln -sf ppl_results_partial_*interpolated.csv ppl_results_to_plot_inter.csv; \\\n",
+                "    ln -sf ppl_results_partial_*interpolated.csv csv_results_to_plot_inter.csv; \\\n",
                 "else \\\n",
-                "    echo \"Error: No ppl results found. Aborting.\"; \\\n",
+                "    echo \"❌ Error: No calibration data file found. Aborting.\"; \\\n",
                 "    exit 1; \\\n",
                 "fi"
             ]
@@ -198,7 +280,7 @@
                 "  plot_ppl.tmp.py\n",
                 "\n",
                 "import os\n",
-                "interp_csv = os.path.isfile(\"ppl_results_to_plot_inter.csv\")\n",
+                "interp_csv = os.path.isfile(\"csv_results_to_plot_inter.csv\")\n",
                 "\n",
                 "if display_graphs:\n",
                 "  # Utility to strip “=…” from any entries\n",
@@ -214,11 +296,11 @@
                 "        clean_rx = strip_assign(rx) if strip_eq else rx\n",
                 "        # this print can be copy‑&‑pasted into a new cell, or you can %run directly below\n",
                 "        if interp_csv:\n",
-                "          print(f\"%run plot_ppl.tmp.py ppl_results_to_plot.csv --tensors '{clean_rx}'\")\n",
-                "          %run plot_ppl.tmp.py ppl_results_to_plot.csv --interp_csv ppl_results_to_plot_inter.csv --tensors '{clean_rx}'\n",
+                "          print(f\"%run plot_ppl.tmp.py csv_results_to_plot.csv --interp_csv csv_results_to_plot_inter.csv --tensors '{clean_rx}'\")\n",
+                "          %run plot_ppl.tmp.py csv_results_to_plot.csv --interp_csv csv_results_to_plot_inter.csv --tensors '{clean_rx}'\n",
                 "        else:\n",
-                "          print(f\"%run plot_ppl.tmp.py ppl_results_to_plot.csv --tensors '{clean_rx}'\")\n",
-                "          %run plot_ppl.tmp.py ppl_results_to_plot.csv --tensors '{clean_rx}'\n",
+                "          print(f\"%run plot_ppl.tmp.py csv_results_to_plot.csv --tensors '{clean_rx}'\")\n",
+                "          %run plot_ppl.tmp.py csv_results_to_plot.csv --tensors '{clean_rx}'\n",
                 "      print()\n",
                 "\n",
                 "  #Now invoke for each\n",
@@ -296,15 +378,25 @@
                 "            raise TypeError(f\"Unsupported group type for --{key}: {type(grp)}\")\n",
                 "\n",
                 "# Determine which file to use\n",
-                "if os.path.isfile(\"ppl_results.csv\"):\n",
+                "if csv_filename and os.path.isfile(csv_filename):\n",
+                "    if not csv_filename.endswith(\"_partial.csv\"):\n",
+                "        input_file = csv_filename\n",
+                "    else:\n",
+                "        # Search for the first matching file in the current directory\n",
+                "        partial_files = glob.glob(\"*_partial_*interpolated.csv\")\n",
+                "        if partial_files:\n",
+                "            input_file = sorted(partial_files)[0]  # Use the first one alphabetically\n",
+                "        else:\n",
+                "            raise FileNotFoundError(\"No suitable input file found: *_partial_*interpolated.csv\")\n",
+                "elif os.path.isfile(\"ppl_results.csv\"):\n",
                 "    input_file = \"ppl_results.csv\"\n",
                 "else:\n",
                 "    # Search for the first matching file in the current directory\n",
-                "    partial_files = glob.glob(\"ppl_results_partial_*interpolated.csv\")\n",
+                "    partial_files = glob.glob(\"*_*interpolated.csv\")\n",
                 "    if partial_files:\n",
                 "        input_file = sorted(partial_files)[0]  # Use the first one alphabetically\n",
                 "    else:\n",
-                "        raise FileNotFoundError(\"No suitable input file found: ppl_results.csv, ppl_results_interpolated.csv, or ppl_results_partial_*interpolated.csv\")\n",
+                "        raise FileNotFoundError(\"No suitable input file found: ppl_results.csv, *_*interpolated.csv, or *_partial_*interpolated.csv\")\n",
                 "\n",
                 "cmd = [\"python\", \"../../quant_assign.py\", input_file]\n",
                 "\n",
