--- a/recipe_to_colab_params.ipynb
+++ b/recipe_to_colab_params.ipynb
@@ -39,7 +39,7 @@
         "echo \"Removing any existing $DIR (if present)...\"\n",
         "rm -rf \"$DIR\"\n",
         "echo \"Cloning $REPO ...\"\n",
-        "git clone \"$REPO\" \"$DIR\"\n",
+        "GIT_LFS_SKIP_SMUDGE=1 git clone \"$REPO\" \"$DIR\"\n",
         "echo \"Repository cloned into $DIR\"\n"
       ]
     },
@@ -99,7 +99,7 @@
         "\n",
         "# Display as a Python code block for easy copying\n",
         "display(Markdown(\"**Colab pipeline parameters produced:**\"))\n",
-        "display(Markdown(f\"```python\\n{content}\\n```\"))\n"
+        "display(Markdown(f\"```bash\\n\\n{content}\\n```\"))\n"
       ]
     }
   ],
