fill_missing_metric.py support for --no-percentage
fill_missing_ppl.py is now fill_missing_metric.py

--- a/quant_recipe_pipeline.ipynb
+++ b/quant_recipe_pipeline.ipynb
@@ -231,7 +231,7 @@
                 "    fi\n",
                 "\n",
                 "    # run interpolation script (adjust path as needed)\n",
-                "    python ../../fill_missing_ppl.py \"$CSV_FILENAME\"\n",
+                "    python ../../fill_missing_metric.py \"$CSV_FILENAME\"\n",
                 "\n",
                 "    # look for generated interpolated file(s)\n",
                 "    new_interpolated=( $pattern )\n",
@@ -257,7 +257,7 @@
                 "    echo \"Interpolation of ppl_results.csv necessary.\"; \\\n",
                 "    ln -sf ppl_results_partial.csv csv_results_to_plot.csv; \\\n",
                 "    rm -f ppl_results_partial_*interpolated.csv; \\\n",
-                "    python ../../fill_missing_ppl.py ppl_results_partial.csv; \\\n",
+                "    python ../../fill_missing_metric.py ppl_results_partial.csv; \\\n",
                 "    ln -sf ppl_results_partial_*interpolated.csv csv_results_to_plot_inter.csv; \\\n",
                 "else \\\n",
                 "    echo \"❌ Error: No calibration data file found. Aborting.\"; \\\n",
